# rg

./: .gitignore  README.md  allPaths.ff4ac446.js  allPathsLoader.ed8d3b72.js  build.sh  editor.worker.e55adb27.js  flake.nix  iconv.fe67aed8.js  index.48d80df1.css  index.9a00a091.css  index.html  index_bg.20a0586a.wasm  index_bg.61cfd16b.wasm  index_bg.7b14139d.wasm  index_bg.8f73f814.wasm  index_bg.aea6fb65.wasm  index_bg.d9aef2b2.wasm  jschardet.0c392736.js  paths.66127771.js  paths.fa011dfc.js  splitPathsBySizeLoader.333a513a.js  test-all.sh  translate-all-games.sh  validate-all.sh  webWorkerExtensionHostIframe.366ddffc.html  worker.247dd515.js  worker.45236006.js  worker.7e491989.js
interpreter_rust/: Cargo.toml  README.md  rust-toolchain.toml
interpreter_rust/browser/: Cargo.toml
interpreter_rust/browser/src/: lib.rs
interpreter_rust/cli/: Cargo.toml
interpreter_rust/cli/benches/: runtime.rs  transforms.rs
interpreter_rust/cli/src/: analyze.rs  flags.rs  lib.rs  main.rs
interpreter_rust/gdl/: Cargo.toml
interpreter_rust/gdl/src/: ast.rs  lib.rs  main.rs
interpreter_rust/gdl/src/ast/: canonicalize.rs  domain_graph.rs  domain_map.rs  eval_distinct.rs  expand_ors.rs  ground.rs  ground_naive.rs  ground_smart.rs  mod.rs  simplify.rs  static_terms.rs  substitute.rs  symbolify.rs  unify.rs
interpreter_rust/gdl/src/ast_transformations/: ground.rs  mod.rs  simplify.rs  substitute.rs  unify.rs
interpreter_rust/gdl/src/format/: infix.rs  mod.rs  prefix.rs
interpreter_rust/gdl/src/parser/: infix.rs  mod.rs  prefix.rs  utils.rs
interpreter_rust/gdl_to_rg/: Cargo.toml
interpreter_rust/gdl_to_rg/src/: lib.rs  main.rs
interpreter_rust/hrg/: Cargo.toml
interpreter_rust/hrg/src/: lib.rs  position.rs
interpreter_rust/hrg/src/ast/: display.rs  mod.rs
interpreter_rust/hrg/src/parsing/: ast_from.rs  mod.rs  parser.rs
interpreter_rust/hrg_to_rg/: Cargo.toml
interpreter_rust/hrg_to_rg/src/: lib.rs  main.rs
interpreter_rust/interpreter/: Cargo.toml
interpreter_rust/interpreter/benches/: runtime.rs
interpreter_rust/interpreter/src/: flags.rs  lib.rs  main.rs
interpreter_rust/interpreter/src/ist/: from.rs  mod.rs  state.rs  tools.rs
interpreter_rust/lsp/: Cargo.toml
interpreter_rust/lsp/src/: backend.rs  code_actions.rs  completions.rs  document.rs  features.rs  lib.rs  semantic_tokens.rs  utils.rs
interpreter_rust/lsp/src/common/: mod.rs  symbol.rs  symbol_table.rs  utils.rs
interpreter_rust/lsp/src/hrg/: symbol.rs  symbol_table.rs
interpreter_rust/lsp/src/rg/: ast_features.rs  mod.rs  stat.rs  statement.rs  symbol.rs  symbol_table.rs
interpreter_rust/lsp_browser/: Cargo.toml
interpreter_rust/lsp_browser/src/: lib.rs
interpreter_rust/map_id/: Cargo.toml
interpreter_rust/map_id/src/: lib.rs
interpreter_rust/map_id_macro/: Cargo.toml
interpreter_rust/map_id_macro/src/: lib.rs
interpreter_rust/parser_utils/: Cargo.toml
interpreter_rust/parser_utils/src/: lib.rs
interpreter_rust/rbg/: Cargo.toml
interpreter_rust/rbg/src/ast/: display.rs  mod.rs
interpreter_rust/rbg/src/parsing/: parser.rs
interpreter_rust/rbg_to_rg/: Cargo.toml
interpreter_rust/rbg_to_rg/src/: lib.rs
interpreter_rust/rg/: Cargo.toml
interpreter_rust/rg/benches/: transforms.rs
interpreter_rust/rg/src/: ast.rs  ast_display.rs  ast_from.rs  error.rs  ist.rs  ist_display.rs  ist_from.rs  ist_state.rs  ist_tools.rs  lib.rs  parser.rs  position.rs
interpreter_rust/rg/src/ast/: display.rs  mod.rs
interpreter_rust/rg/src/ast/analyses/: constants_analysis.rs  mod.rs  reachable_nodes.rs  reaching_assignments.rs  reaching_binding_assignments.rs  reaching_definitions.rs  reaching_paths.rs  value_sets.rs
interpreter_rust/rg/src/ast/analysis/: flow.rs  framework.rs  mod.rs  reachable_nodes.rs  reaching_definitions.rs  reaching_paths.rs
interpreter_rust/rg/src/ast/transforms/: add_builtins.rs  add_explicit_casts.rs  calculate_disjoints.rs  calculate_iterators.rs  calculate_repeats.rs  calculate_repeats_and_uniques.rs  calculate_simple_apply.rs  calculate_tag_indexes.rs  calculate_uniques.rs  compact_comparisons.rs  compact_reachability.rs  compact_skip_edges.rs  expand_assignment_any.rs  expand_generator_nodes.rs  expand_tag_variable.rs  inline_assignment.rs  inline_reachability.rs  join_exclusive_edges.rs  join_fork_prefixes.rs  join_fork_suffixes.rs  join_generators.rs  mangle_symbols.rs  merge_accesses.rs  merge_bindings.rs  mod.rs  (+20 more)
interpreter_rust/rg/src/ast_transforms/: add_builtins.rs  add_explicit_casts.rs  compact_skip_edges.rs  expand_generator_nodes.rs  mangle_symbols.rs  mod.rs  normalize_types.rs  skip_self_assignments.rs
interpreter_rust/rg/src/ast_validators/: check_maps.rs  check_multiple_edges.rs  check_reachabilities.rs  check_types.rs  mod.rs
interpreter_rust/rg/src/parsing/: ast_from.rs  error.rs  mod.rs  parser.rs  parser_utils.rs
interpreter_rust/rg_interpreter/: Cargo.toml
interpreter_rust/rg_interpreter/src/: display.rs  ist.rs  lib.rs  state.rs  tools.rs
interpreter_rust/rg_lsp/: Cargo.toml
interpreter_rust/rg_lsp/src/: ast.rs  ast_display.rs  ast_from.rs  ast_positioned.rs  lib.rs  parser.rs  position.rs
interpreter_rust/rg_lsp/src/lsp/: ast_features.rs  backend.rs  completions.rs  document.rs  features.rs  logger.rs  mod.rs  semantic_tokens.rs  symbol_features.rs  symbols.rs  utils.rs
interpreter_rust/rg_lsp/src/rg/: ast.rs  ast_display.rs  ast_from.rs  error.rs  mod.rs  parser.rs  position.rs  stat.rs  symbol.rs  symbol_table.rs  symbols.rs
interpreter_rust/rg_transform/: Cargo.toml
interpreter_rust/rg_transform/src/: add_builtins.rs  expand_generator_nodes.rs  lib.rs  skip_self_assignments.rs
interpreter_rust/src/: deserializer.rs  lib.rs  main.rs  parser.rs
interpreter_rust/src/rg/: ast.rs  ist.rs  ist_state.rs  ist_tools.rs  mod.rs  parser.rs
interpreter_rust/src/utils/: interner.rs  map_id.rs  mod.rs  parser.rs
interpreter_rust/utils/: Cargo.toml
interpreter_rust/utils/src/: cartesian.rs  display.rs  interner.rs  lib.rs  parser.rs  position.rs
interpreter_rust/utils/src/parsing/: error.rs
(+519 files in other folders)
