[package]
name = "interpreter_rust"
version = "0.1.0"
authors = ["Radosław Miernik <radekmie@gmail.com>"]
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.8", features = ["js"] }
js-sys = "0.3.61"
nom = "7.1.3"
rand = "0.8.5"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = "1.0.91"
wasm-bindgen = "0.2.83"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = true
