[package]
name = "interpreter"
version = "0.1.0"
authors = ["Radosław Miernik <radekmie@gmail.com>"]
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
gdl = { path = "../gdl" }
gdl_to_rg = { path = "../gdl_to_rg" }
getrandom = { version = "0.2.8", features = ["js"] }
js-sys = "0.3.61"
map_id = { path = "../map_id" }
map_id_macro = { path = "../map_id_macro" }
nom = "7.1.3"
rand = "0.8.5"
rg = { path = "../rg" }
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = "1.0.91"
utils = { path = "../utils" }
wasm-bindgen = "0.2.83"

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true
