[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
console_error_panic_hook = "0.1.7"
gdl = { path = "../gdl" }
gdl_to_rg = { path = "../gdl_to_rg" }
getrandom = { version = "0.2.8", features = ["js"] }
hrg = { path = "../hrg" }
hrg_to_rg = { path = "../hrg_to_rg" }
js-sys = "0.3.61"
map_id = { path = "../map_id" }
map_id_macro = { path = "../map_id_macro" }
rand = { version = "0.8.5", features = ["small_rng"] }
rbg = { path = "../rbg" }
rbg_to_rg = { path = "../rbg_to_rg" }
rg = { path = "../rg" }
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = "1.0.91"
utils = { path = "../utils" }
wasm-bindgen = "0.2.83"
web-time = "1.1.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
harness = false
name = "runtime"

[lib]
bench = false
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true
