[package]
name = "lsp"
version = "0.1.0"
authors = ["Jakub Cieśluk <323892@uwr.edu.pl>"]
edition = "2021"

[dependencies]
dashmap = "5.5.3"
hrg = { path = "../hrg" }
rg = { path = "../rg" }
tower-lsp = { version = "0.20.0", default-features = false, features = ["runtime-agnostic"] }
utils = { path = "../utils" }

[lints]
workspace = true
