[package]
name = "lsp_browser"
version = "0.1.0"
authors = ["Jakub Cieśluk <323892@uwr.edu.pl>"]
edition = "2021"

[dependencies]
futures = "0.3.21"
getrandom = { version = "0.2.8", features = ["js"] }
js-sys = "0.3.57"
lsp = { path = "../lsp" }
tower-lsp = { version = "0.20.0", default-features = false, features = ["runtime-agnostic"] }
wasm-bindgen = "0.2.85"
wasm-bindgen-futures = { version = "0.4.30", features = ["futures-core-03-stream"] }
wasm-streams = "0.3.0"

[dependencies.web-sys]
features = [
  "HtmlTextAreaElement",
  "ReadableStream",
  "WritableStream",
]
version = "0.3.65"

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true
