[package]
name = "rbg"
version = "0.1.0"
edition = "2021"

[dependencies]
map_id = { path = "../map_id" }
map_id_macro = { path = "../map_id_macro" }
serde = { version = "1.0.152", features = ["derive", "rc"] }
nom = "7.1.3"
nom_locate = "4.2.0"
utils = { path = "../utils" }

[lints]
workspace = true
