[package]
name = "rg"
version = "0.1.0"
authors = ["Radosław Miernik <radekmie@gmail.com>"]
edition = "2021"

[dependencies]
map_id = { path = "../map_id" }
map_id_macro = { path = "../map_id_macro" }
nom = "8.0.0"
nom_locate = "5.0.0"
serde = { version = "1.0.152", features = ["derive", "rc"] }
utils = { path = "../utils" }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
harness = false
name = "transforms"

[lints]
workspace = true
