[package]
name = "rg_lsp"
version = "0.1.0"
authors = ["Radosław Miernik <radekmie@gmail.com>"]
edition = "2021"

[dependencies]
nom = "7.1.3"
nom_locate = "4.2.0"
rand = "0.8.5"
tower-lsp = "0.20.0"
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = "1.0.1"
ropey = "1.6.0"
dashmap = "5.5.3"